--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Architect Coder</string>
+    <string name="api_key">38cd1c5a719c0a7e3ac21fb3ad11f016</string>
 </resources>
